--- a/src/components/calendar.scss
+++ b/src/components/calendar.scss
@@ -6,28 +6,29 @@
   user-select: none;
 }
 
-.rdrDateDisplay{
+.rdrDateDisplay {
   display: flex;
   justify-content: space-between;
 }
 
-.rdrDateDisplayItem{
+.rdrDateDisplayItem {
   flex: 1 1;
   width: 0;
   text-align: center;
   color: inherit;
-  & + &{
+  & + & {
     margin-left: 0.833em;
   }
-  input{
+  input {
     text-align: inherit;
-    &:disabled{
+    &:disabled {
       cursor: default;
     }
   }
 }
 
-.rdrDateDisplayItemActive{}
+.rdrDateDisplayItemActive {
+}
 
 .rdrMonthAndYearWrapper {
   box-sizing: inherit;
@@ -35,16 +36,18 @@
   justify-content: space-between;
 }
 
-.rdrMonthAndYearPickers{
+.rdrMonthAndYearPickers {
   flex: 1 1 auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.rdrMonthPicker{}
+.rdrMonthPicker {
+}
 
-.rdrYearPicker{}
+.rdrYearPicker {
+}
 
 .rdrNextPrevButton {
   box-sizing: inherit;
@@ -52,28 +55,43 @@
   outline: none;
 }
 
-.rdrPprevButton {}
+.rdrPprevButton {
+}
 
-.rdrNextButton {}
+.rdrNextButton {
+}
 
-.rdrMonths{
+.rdrMonths {
   display: flex;
 }
 
-.rdrMonthsVertical{
+.rdrMonthsVertical {
   flex-direction: column;
 }
 
-.rdrMonthsHorizontal > div > div > div{
+.rdrMonthsHorizontal > div > div > div {
   display: flex;
   flex-direction: row;
 }
 
-.rdrMonth{
+.rdrMonth {
   width: 27.667em;
+  position: relative;
 }
 
-.rdrWeekDays{
+.yearPreivew {
+  position: absolute;
+  bottom: 100%;
+  margin-bottom: 1.05em;
+  left: 0;
+  width: 100%;
+  font-size: 1.2em;
+  pointer-events: none;
+  font-weight: 600;
+  color: #849095;
+}
+
+.rdrWeekDays {
   display: flex;
 }
 
@@ -83,15 +101,19 @@
   text-align: center;
 }
 
-.rdrDays{
+.rdrDays {
   display: flex;
   flex-wrap: wrap;
 }
 
-.rdrDateDisplayWrapper{}
+.rdrDateDisplayWrapper {
+}
 
-.rdrMonthName{}
+.rdrMonthName {
+}
 
-.rdrInfiniteMonths{
+.rdrInfiniteMonths {
   overflow: auto;
+}
+.rdrDateModeWrapper {
 }
