--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import 'components/calendar.scss';
 @import 'components/dateRange.scss';
 @import 'components/dayCell.scss';
+@import 'components/quarterCell.scss';
+@import 'components/monthCell.scss';
 @import 'components/dateRangePicker.scss';
 @import 'components/definedRange.scss';
